# huajing-imagesworld

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugins/sdk/: package.json
plugins/sdk/src/: index.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: items_cmds.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/sdk_services/: mod.rs
src/components/shell/: AppShell.vue  AssetBrowser.vue  ContextMenu.vue  Inspector.vue  Titlebar.vue  ToastProvider.vue
src/services/: api.ts
src/stores/: items.ts  toast.ts
src/types/: index.ts
