[package]
name = "画境"
version = "0.1.0"
edition = "2021"

[lib]
name = "huajing_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sled = "0.34"
image = "0.25"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = "0.4"
rayon = "1"

[patch.crates-io]
wry = { path = "vendor/wry-0.55.1" }
